--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,5 @@
-book_filename: pharmapk
-repo: https://github.com/pipetcpt/pharmapk/
+book_filename: pharmapk2
+repo: https://github.com/pipetcpt/pharmapk2/
 output_dir: docs
 delete_merged_file: true
 language:
